@startuml FilingCollection Class Diagram
skinparam linetype ortho
skinparam classAttributeIconSize 0

package "Collection Boundary" {

    class Collection <<Facade>> {
        - _storage: Storage
        - _catalog: Catalog
        - _locator: Locator

        + add(filing: Filing, content: bytes) -> str
        + get(id: str) -> Filing | None
        + find(expr: Expr, limit: int, offset: int, order_by: str, desc: boot) -> list[Filing]
    }

    package "Locator Component" {
        class Locator {
            + resolve(filing: Filing) -> str
        }
    }

    package "Storage Layer" {
        interface Storage <<Protocol>> {
            + save(filing_id, content, metadata, storage_key): str
            + load_by_path(relative_path: str): bytes
        }
        
        class LocalStorage {}

        class S3Storage {}
    }

    package "Catalog Layer" {
        class Catalog {
            + db_path: str
            + conn: duckdb.connect

            - _init_schema()

            + index(filing Filing)
            + index_batch(fiilngs: list[Filing])
            + get(filing_id: str) -> dict | None
            + search(expr: Expr, limit: int, offset: int, order_by: str, desc: bool) -> list[dict]
            + search_raw(sql: str, params: list) -> list[Any]
            + count(expr: Expr) -> int
            + stats() -> dict
            + clear()
            + close()
        }
    }


}

package "Filing Boundary" {

    class ModelMeta {
        + __new__(mcs, name, bases, attrs) -> type
    }

    class Filing {
        + id: Field(str)
        + source: Field(str)
        + checksum: Field(str)
        + name: Field(str)
        + is_zip: Field(bool)
        + created_at: Field(datetime)

        + get(key: str, default: Any = None) -> Any
        + set(key: str, value: Any) -> None
        + get_content() -> bytes
        + verify_checksum() -> bool
        + to_dict() -> dict[str, Any]
        + from_dict(data: dict, storage: Storage = None) -> Filing
        + get_indexed_fields() -> list[str]
        
        + __repr__() -> str
    }

    class Expr {
        + sql: str
        + params: list[Any]

        + __and__(other: Expr) -> Expr
        + __or__(other: Expr) -> Expr
        + __invert__() -> Expr
        + __repr__() -> str
    }

    class Field {
        + name: str
        + _field_type: str
        + indexed: bool
        + description: str

        - _create_expr(op: str, value: Any) -> Expr

        + __eq__(value: Any) -> Expr
        + __ne__(value: Any) -> Expr
        + __gt__(value: Any) -> Expr
        + __ge__(value: Any) -> Expr
        + __lt__(value: Any) -> Expr
        + __le__(value: Any) -> Expr
        + contains(value: str) -> Expr
        + startswith(value: str) -> Expr
        + endswith(value: str) -> Expr
        + in_(values: list[Any]) -> Expr
        + not_in(values: list[Any]) -> Expr
        + is_null() -> Expr
        + is_not_null() -> Expr
        + between(lower: Any, upper: Any) -> Expr

        + __get__(obj, objtype=None)
        + __set__(obj, value)
        + __repr__() -> str
    }
}

' 継承
ModelMeta <|-- Filing
' 集約 (自律的な親子関係)
Filing o-- Field
' 構成
Collection *-- Storage
Collection *-- Catalog
Collection *-- Locator
Field *-- Expr
' 依存
Catalog  ..> Filing 
Catalog ..> Expr
Locator ..> Filing
' 実装
Storage <|.. LocalStorage
Storage <|.. S3Storage

@enduml
